[package]
name = "gitter"
version = "0.1.1"
edition = "2021"
authors = ["Author"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
clap_derive = "4.5.5"
colored = "2.1.0"
tempfile = "3.14.0"
